--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts (Cairo) -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
-
+    <meta name="google-site-verification" content="jjwjUiaJG90UxYlQW72mHwvEc21EGuJWyUWCB3yu-74" />
+ 
     <style>
         body {
             font-family: 'Cairo', sans-serif;
@@ -2873,3 +2874,4 @@
     </script>
 </body>
 </html>
+
