--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div class="scroll-card group cursor-pointer card-hover" onclick="openPlayer('bojack-horseman')">
                         <div class="relative aspect-[2/3] rounded-2xl overflow-hidden border border-white/10 neon-border transition-all">
                             <div class="absolute top-3 right-3 z-10 bg-emerald-600 text-xs font-black px-2 py-1 rounded-md">جديد</div>
-                            <img src="https://up6.cc/2026/01/176917161480881.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="https://k.top4top.io/p_36849g9571.png" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent opacity-80"></div>
                             <div class="absolute bottom-4 right-4 left-4">
                                 <h4 class="font-bold text-lg leading-tight">bojack horsman</h4>
@@ -1274,7 +1274,7 @@
             'flapjack': 'https://up6.cc/2026/01/176917046886021.jpg',
             'the-stardays': 'https://up6.cc/2026/01/176917094387971.jpg',
             'star-vs-the-forces-of-evil': 'https://up6.cc/2026/01/176917123745971.jpg',
-            'bojack-horseman': 'https://up6.cc/2026/01/176917161480881.jpg',
+            'bojack-horseman': 'https://k.top4top.io/p_36849g9571.png',
             'my-melody-and-kuromi': 'https://up6.cc/2026/01/176917208094821.jpg',
             'krapopolis': 'https://up6.cc/2026/01/176917231656041.jpg',
             'scissor-seven': 'https://up6.cc/2026/01/176917272905011.jpg',
@@ -2874,4 +2874,5 @@
     </script>
 </body>
 </html>
+
 
