--- a/index.html
+++ b/index.html
@@ -208,29 +208,42 @@
 <body class="custom-scrollbar gradient-bg">
 
     <!-- الهيدر مع اللوغو -->
-    <header class="fixed top-0 w-full z-50 transition-all duration-300 bg-black/90 backdrop-blur-lg border-b border-white/10 py-4">
-        <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <div class="w-10 h-10 bg-emerald-600 rounded-xl flex items-center justify-center">
-                    <i class="fa-solid fa-play text-white text-lg"></i>
-                </div>
-                <h1 class="text-3xl font-black text-emerald-600 italic tracking-tighter">WAVORA</h1>
-            </div>
-            <nav class="flex items-center gap-6">
-                <span class="text-sm font-bold text-zinc-300 hidden md:inline">أهلاً بك في عالم المغامرة</span>
-                
-                <!-- زر البحث -->
-                <button id="search-btn" class="glass w-12 h-12 rounded-xl flex items-center justify-center hover:bg-emerald-600 transition-all hover:shadow-lg hover:shadow-emerald-600/20">
-                    <i class="fa-solid fa-search text-xl"></i>
-                </button>
-                
-                <!-- زر القائمة الجانبية في اليسار -->
-                <button id="menu-toggle" class="glass w-12 h-12 rounded-xl flex items-center justify-center hover:bg-emerald-600 transition-all hover:shadow-lg hover:shadow-emerald-600/20">
-                    <i class="fa-solid fa-bars text-xl"></i>
-                </button>
-            </nav>
-        </div>
-    </header>
+    <header class="fixed top-0 w-full z-50 bg-black/90 backdrop-blur-lg border-b border-white/10 py-4">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-3 items-center">
+
+    <!-- العمود الأول (فارغ للموازنة) -->
+    <div></div>
+
+    <!-- الوسط: اللوغو -->
+    <div class="flex justify-center">
+      <img
+        src="https://f.top4top.io/p_3688myaxn1.png"
+        alt="Wavora Logo"
+        class="h-10 md:h-12 object-contain"
+      >
+    </div>
+
+    <!-- العمود الأخير: الأزرار -->
+    <nav class="flex items-center gap-6 justify-end">
+
+      <!-- زر البحث -->
+      <button
+  id="search-btn"
+  class="w-10 h-10 rounded-xl bg-white/10 hover:bg-white/20 flex items-center justify-center transition">
+  <i class="fa-solid fa-magnifying-glass text-white"></i>
+</button>
+
+      <!-- زر المنيو -->
+      <button
+  id="menu-toggle"
+  class="w-10 h-10 rounded-xl bg-white/10 hover:bg-white/20 flex items-center justify-center transition">
+  <i class="fa-solid fa-bars text-white"></i>
+</button>
+
+    </nav>
+
+  </div>
+</header>
 
     <!-- القائمة الجانبية -->
     <div id="sidebar-menu" class="fixed top-0 left-0 h-full w-80 z-[60] bg-[#0A0A0A] border-r border-white/10 p-6 transform transition-transform duration-300 -translate-x-full">
@@ -2945,4 +2958,3 @@
     </script>
 </body>
 </html>
-
